입력한 문구를 데이터 첨부

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,13 @@
         android:text="다른 화면으로 이동"/>
 
     <EditText
-        android:id="@+id/massageEdt"
+        android:id="@+id/messageEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="전달할 메시지 입력"/>
 
     <Button
+        android:id="@+id/sendMessageBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="메시지를 다른화면으로 전달"/>
