--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/nicknameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17sp"
@@ -50,6 +51,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:id="@+id/editNicknameBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="닉네임 변경"/>
